--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,6 +1,9 @@
 {
-    "files.associations": {
-        "*.tpp": "cpp"
-    },
-    "terminal.integrated.shell.windows": "cmd.exe"
+  "files.associations": {
+    "*.ejs": "html",
+    "*.json": "jsonc",
+    "*.tpp": "cpp",
+    "ostream": "cpp"
+  },
+  "terminal.integrated.shell.windows": "cmd.exe"
 }
